try: add base_commit parameter
